--- a/app/src/main/res/layout/activity_data_transaksi.xml
+++ b/app/src/main/res/layout/activity_data_transaksi.xml
@@ -153,6 +153,7 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
+            android:layout_marginStart="10dp"
             android:text="Tambahan"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFC107"/>
@@ -162,6 +163,7 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
+            android:layout_marginEnd="10dp"
             android:text="Proses"
             android:textColor="#FFFFFF"
             android:backgroundTint="#4CAF50"
