--- a/app/src/main/res/layout/card_pilih_tambahan.xml
+++ b/app/src/main/res/layout/card_pilih_tambahan.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="12dp"
     card_view:cardElevation="4dp"
+    android:id="@+id/cvCARD_PILIHTAMBAHAN"
     android:layout_margin="5dp"
     android:layout_marginBottom="10dp">
 
@@ -15,7 +16,7 @@
 
         <!-- Header -->
         <TextView
-            android:id="@+id/tvId"
+            android:id="@+id/tvCARD_PILIHTAMBAHAN_ID"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:background="#9900BF"
@@ -33,7 +34,7 @@
             android:padding="12dp">
 
             <TextView
-                android:id="@+id/tvName"
+                android:id="@+id/tvCARD_PILIHTAMBAHAN_nama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Pewangi Aroma Terapi"
@@ -41,12 +42,11 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/tvAddress"
+                android:id="@+id/tvCARD_PILIHTAMBAHAN_harga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="Harga : Rp. 6.000" />
         </LinearLayout>
-
     </LinearLayout>
 </androidx.cardview.widget.CardView>
