--- a/app/src/main/res/layout/activity_konfirmasi_data_transaksi.xml
+++ b/app/src/main/res/layout/activity_konfirmasi_data_transaksi.xml
@@ -97,9 +97,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_vertical|space_between"
+        android:gravity="center_vertical"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toTopOf="@id/layoutButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
